# voxel_pkg_extended

./: CMakeLists.txt  LICENSE  README.md
data/: filtered_new_pcd.pcd
include/voxel_pkg/mls_upsampler/: mls_upsampler.h
include/voxel_pkg/voxel_down_sampling/: voxel_grid_filter.h
launch/: start_upsampler.launch  start_voxel_grid_filter.launch
src/mls_upsampler/: Mls_upsampler.cpp  mls_upsampler_node.cpp
src/voxel_down_sampling/: Voxel_filter.cpp  voxel_filter_node.cpp
voxel_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
voxel_ws/devel/lib/pkgconfig/: voxel_pkg.pc
voxel_ws/devel/lib/voxel_pkg/: mls_upsampler_node  voxel_filter_node
voxel_ws/devel/share/voxel_pkg/cmake/: voxel_pkgConfig.cmake
